--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -9,16 +9,16 @@
 
     <link rel="alternate" type="application/rss&#43;xml" href="/docs/index.xml">
 
-    <link rel="shortcut icon" href="{{ site.url | append: site.baseurl }}/assets/favicons/favicon.ico">
-    <link rel="apple-touch-icon" href="{{ site.url | append: site.baseurl }}/assets/favicons/apple-touch-icon-180x180.png" sizes="180x180">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/android-36x36.png" sizes="36x36">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/android-48x48.png" sizes="48x48">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/android-72x72.png" sizes="72x72">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/android-96x196.png" sizes="96x196">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/android-144x144.png" sizes="144x144">
-    <link rel="icon" type="image/png" href="{{ site.url | append: site.baseurl }}/assets/favicons/android-192x192.png" sizes="192x192">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico">
+    <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/favicons/apple-touch-icon-180x180.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-36x36.png" sizes="36x36">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-48x48.png" sizes="48x48">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-72x72.png" sizes="72x72">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-96x196.png" sizes="96x196">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-144x144.png" sizes="144x144">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-192x192.png" sizes="192x192">
 
     <title>{{ site.title }} | {{ page.title | default: site.title }}</title>
     <meta property="og:title"
@@ -26,9 +26,9 @@
     <meta property="og:description"
         content="{{ page.description | default: site.description }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{ site.url }}" />
-    <meta property="og:site_name" content="{{ site.url }}" />
-    <meta property="og:image" content="{{ site.url | append: site.baseurl }}/assets/img/logo-share.png" />
+    <meta property="og:url" content="{{ site.baseurl }}" />
+    <meta property="og:site_name" content="{{ site.baseurl }}" />
+    <meta property="og:image" content="{{ site.baseurl }}/assets/img/logo-share.png" />
 
     <meta itemprop="name" content="{{ page.title | default: site.title }}">
     <meta itemprop="description"
@@ -38,7 +38,7 @@
     <meta name="twitter:title" content="{{ site.title }} | {{ page.title | default: site.title }}" />
     <meta name="twitter:description"
         content="{{ page.description | default: site.description | strip_html | strip_newlines | truncate: 160 }}" />
-    <meta property="twitter:image" content="{{ site.url | append: site.baseurl }}/assets/img/logo-share.png" />
+    <meta property="twitter:image" content="{{ site.baseurl }}/assets/img/logo-share.png" />
 
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css">
