fix: anchor margin offset

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -186,14 +186,16 @@ hr {
     overflow: visible
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     margin-top: 1rem;
-    margin-bottom: .25rem
+    margin-bottom: .25rem;
+    scroll-margin-top: 80px;
+}
+
+@media(max-width:768px) {
+    h1, h2, h3, h4, h5, h6 {
+        scroll-margin-top: 12px
+    }
 }
 
 p {
