--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <nav style="background: #2c2c2c;" class="js-navbar-scroll navbar navbar-expand navbar-dark flex-column flex-md-row td-navbar">
+    <nav style="background: #2c2c2c;" class="js-navbar-scroll navbar navbar-fixed-top navbar-dark flex-column flex-md-row td-navbar">
         <a class="navbar-brand" href="{{ site.baseurl }}/">
             <span>
                 <img style="max-height: 34px; margin-left: 12px;"
@@ -8,7 +8,7 @@
         </a>
         <div style="margin-left: auto;" class="d-none d-md-block">
             <a href="{{ site.repo }}">
-                <i class="fab fa fa-github fa-2x" style="color: white; padding-right:12px; float:left; margin-top:5px"></i>
+                <i class="fab fa fa-github fa-3x" style="color: white; padding-right:12px; float:left; margin-top:5px"></i>
             </a>
         </div>
     </nav>
