--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -1,12 +1,12 @@
 <div id="td-sidebar-menu" class="td-sidebar__inner">
 
   <form class="td-sidebar__search d-flex align-items-center">
-    <input type="search" class="form-control td-search-input" placeholder="&#xf002 Search…" aria-label="Search this site…" autocomplete="off">
+    <input type="search" class="form-control td-search-input" placeholder="Search…" aria-label="Search this site…" autocomplete="off">
       <button class="btn btn-link td-sidebar__toggle d-md-none p-0 ml-3 fas fa-bars" type="button" data-toggle="collapse" data-target="#td-section-nav" aria-controls="td-docs-nav" aria-expanded="false" aria-label="Toggle section navigation">
       </button>
   </form>
 
-  <nav class="collapse td-sidebar-nav pt-2 pl-4" id="td-section-nav">
+  <nav class="collapse td-sidebar-nav py-2 pl-4" id="td-section-nav">
     {% for section in site.data.toc %}
       <ul class="td-sidebar-nav__section pr-md-3">
         {% capture sectionUrl %}
