chore: cleanup/refactor docs

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <nav style="background: #2c2c2c;" class="js-navbar-scroll navbar navbar-fixed-top navbar-dark flex-column flex-md-row td-navbar">
         <a class="navbar-brand" href="{{ site.baseurl }}/">
-            <span>
-                <img style="max-height: 34px; margin-left: 12px;"
-                 src="{{ site.baseurl }}/assets/img/logo-small.png" alt="logo">
+                <img style="max-height: 34px; margin-left: 12px; vertical-align: midle; margin-right: 12px; display:inline;" src="{{ site.baseurl }}/assets/img/icon.svg" alt="logo">
+            <span style="vertical-align: middle; font-size: 32px;">
+                Godot State Charts
             </span>
         </a>
         <div style="margin-left: auto;" class="d-none d-md-block">
