--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
         <small class="text-white">
           © {{ 'now' | date: "%Y" }} {{ site.author }}<br>
-          <a style="color: #e18e39" href="{{ site.repo }}">GitHub</a>
+          <a style="color: #e18e39" href="{{ site.repo }}">GitHub Repository</a>
         </small>
         {% if site.privacy %}<small class="ml-1"><a href="{{ site.privacy }}" target="_blank">Privacy Policy</a></small>{% endif %}
   </div>
