fix: tweak starting page, improve footer

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer class="bg-dark row d-print-none">
   <div class="footer-container">
         <small class="text-white">
-          © {{ 'now' | date: "%Y" }} {{ site.author }}<br>
+          © {{ 'now' | date: "%Y" }} {{ site.author }} <br>
+            Website created by Joel Gomes da Silva<br>  
           <a style="color: #e18e39" href="{{ site.repo }}">GitHub Repository</a>
         </small>
         {% if site.privacy %}<small class="ml-1"><a href="{{ site.privacy }}" target="_blank">Privacy Policy</a></small>{% endif %}
