--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
         <small class="text-white">
           © {{ 'now' | date: "%Y" }} {{ site.author }} <br>
-            Website created by Joel Gomes da Silva<br>  
+            Website created by <a target="_blank" href="https://github.com/joelgomes1994" style="color: #e18e39; text-decoration: none;">joelgomes1994</a><br>  
           <a style="color: #e18e39" href="{{ site.repo }}">GitHub Repository</a>
         </small>
         {% if site.privacy %}<small class="ml-1"><a href="{{ site.privacy }}" target="_blank">Privacy Policy</a></small>{% endif %}
